@@ -1,3 +1,11 @@
+2012-12-11  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.def (target_modules): Add bootstrap=true and
+	raw_cxx=true to libsanitizer.
+	* configure.ac (bootstrap_target_libs): Add libsanitizer.
+	* Makefile.in: Regenerated.
+	* configure: Likewise.
+
 2012-12-08  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
 
 	* config.sub: Merge from config repo.
